2001-08-20  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-node.c (bonobo_ui_node_from_file):
	update to unlink root node as well, and strip earlier.

2001-08-20  Michael Meeks  <michael@ximian.com>

	* tests/test-ui.c (main): Make the 'Insensitive' item
	insensitive - woah !

	* bonobo/bonobo-ui-container.c
	(impl_Bonobo_UIContainer_setNode): silently accept
	xml being empty without doing anything.

	* bonobo/bonobo-ui-component.c (impl_xml_set): return
	if xml is empty.

	* bonobo/bonobo-ui-node.c
	(bonobo_ui_node_from_string): unlink the root node
	from the doc.

2001-08-18  Darin Adler  <darin@bentspoon.com>

	* configure.in: Add GLIB_GENMARSHAL.
	
	* bonobo/Makefile.am: Build marshal files in a simpler way.
	
	* bonobo/.cvsignore:
	* bonobo/bonoboui-marshal-main.c:
	* bonobo/bonoboui-marshal.list:
	* bonobo/bonobo-ui-component.c:
	* bonobo/bonobo-ui-marshal-main.c:
	* bonobo/bonobo-ui-marshal.list:
	Changed name of marshal files.
	
	* samples/bonoboui-hello/Makefile.am:
	* samples/controls/Makefile.am:
	* tests/Makefile.am:
	Removed extra -I directives.

2001-08-17  Cody Russell  <bratsche@gnome.org>

	* bonobo/bonobo-zoomable.c: bonobo_zoomable_new() should be
	using g_object_new(), not gtk_type_new().

2001-08-16  Fatih Demir <kabalak@gtranslator.org>

	* configure.in: Added "tr" to the languages list.

2001-08-14  Michael Meeks  <michael@ximian.com>

	* configure.in: depend on bonobo-activation >= 0.9.1

	* samples/controls/Makefile.am (serverdir): s/oaf/server/
	update directory to install to.

2001-08-14  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-control-frame.c (get_toplevel_fn):
	fixup allocator mixup.

	* tests/test-focus.c (main): upd.
	(clicked_fn): add to kill transient thing.

2001-08-13  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-canvas-component.h: add missing includes.

	* bonobo/bonobo-canvas-component.c: squash warning.

	* bonobo/bonobo-ui-engine.c
	(bonobo_ui_engine_exec_verb): stub.