@@ -1,3 +1,8 @@
+2001-08-22  Anders Carlsson  <andersca@gnu.org>
+
+	* bonobo/bonobo-ui-component.c (impl_xml_get): Free our
+	ev.
+
 2001-08-20  Michael Meeks  <michael@ximian.com>
 
 	* bonobo/bonobo-ui-node.c (bonobo_ui_node_from_file):
